--- a/requirementsubuntu.txt
+++ b/requirementsubuntu.txt
@@ -307,7 +307,7 @@ requests==2.23.0
 requests-oauthlib==1.3.0
 resampy==0.2.2
 retrying==1.3.3
-rpy2 #==3.4.5 # later maybe , avoided to save time
+#rpy2 #==3.4.5 # later maybe , avoided to save time
 rsa==4.7.2
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
