--- a/requirementsubuntu.txt
+++ b/requirementsubuntu.txt
@@ -315,7 +315,7 @@ sacremoses==0.0.46
 scikit-image==0.16.2
 scikit-learn==0.22.2.post1
 scipy==1.4.1
-screen-resolution-extra # ==0.0.0
+#screen-resolution-extra # ==0.0.0
 scs==2.1.4
 seaborn==0.11.2
 semver==2.13.0
