--- a/requirementsubuntu.txt
+++ b/requirementsubuntu.txt
@@ -1,6 +1,6 @@
 vqgan-jax @ git+https://github.com/patil-suraj/vqgan-jax.git
-pip install Pillow
-pip install ipywidgets
+Pillow
+ipywidgets
 absl-py==0.12.0
 alabaster==0.7.12
 albumentations==0.1.12
